Select game mode work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,28 @@
         android:theme="@style/Theme.DICE"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
-            android:exported="true" >
+            android:name=".ResidentEvilMenuActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".SelectGameModeActivity"
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
+            android:name=".StreetFighterMenuActivity"
+            android:exported="false" />
+        <activity
             android:name=".DiceActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
